1. Replaced use of collect(Collectors.toList()) with toList(). 2. Added private constructor to other classes.